# alkon

./: .gitmodules  CMakeLists.txt  README.md
alkon/: CMakeLists.txt  Cargo.toml  build.rs
alkon/src/: ffi.rs  main.rs
